--- a/docs/Doxyfile.cfg
+++ b/docs/Doxyfile.cfg
@@ -8,7 +8,7 @@
 #---------------------------------------------------------------------------
 
 DOXYFILE_ENCODING      = UTF-8
-PROJECT_NAME           = "SmallSoft Decoder Pack"
+PROJECT_NAME           = "SmallSoft Decoder Pack - Справка"
 PROJECT_NUMBER         =
 PROJECT_BRIEF          =
 
