--- a/MMControl/MMControl.vcxproj
+++ b/MMControl/MMControl.vcxproj
@@ -61,6 +61,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>Strmiids.lib;winmm.lib;strmiids.lib;quartz.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
